--- a/src/Componets/Navbar/Navbar.css
+++ b/src/Componets/Navbar/Navbar.css
@@ -10,6 +10,8 @@
     background-color: #d0d0d0;
     position: fixed;
     z-index: 10;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .Navbar_Section {
@@ -62,6 +64,10 @@
     font-weight: 600;
 }
 
+.Navbar_Menu {
+    display: none;
+}
+
 @media screen and (min-width:1025px) and (max-width:1200px) {
     .Navbar_Container {
         width: 100%;
@@ -69,6 +75,8 @@
         background-color: #d0d0d0;
         position: fixed;
         z-index: 10;
+        margin-left: 0;
+        margin-right: 0;
     }
 
 
@@ -106,6 +114,10 @@
         font-weight: 600;
     }
 
+    .Navbar_Menu {
+        display: none;
+    }
+
 }
 
 @media screen and (min-width:769px) and (max-width:1025px) {
@@ -115,6 +127,8 @@
         background-color: #d0d0d0;
         position: fixed;
         z-index: 10;
+        margin-left: 0;
+        margin-right: 0;
     }
 
 
@@ -127,7 +141,7 @@
 
     .Navbar_Left_Side>h3 {
         font-weight: 600;
-        font-size: 19px;
+        font-size: 16px;
         color: #c74126;
     }
 
@@ -148,8 +162,90 @@
         padding-left: 15px;
         padding-right: 5px;
         color: #c74126;
-        font-size: 19px;
+        font-size: 16px;
         font-weight: 600;
+    }
+
+    .Navbar_Menu {
+        display: none;
+    }
+
+}
+
+
+@media screen and (min-width:481px) and (max-width:768px) {
+    .Navbar_Container {
+        width: 100%;
+        height: 110px;
+        background-color: #d0d0d0;
+        position: fixed;
+        z-index: 10;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+
+    .Navbar_Left_Side>img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        margin-right: 8px;
+    }
+
+    .Navbar_Left_Side>h3 {
+        font-weight: 600;
+        font-size: 22px;
+        color: #c74126;
+    }
+
+    .Navbar_Right_Side {
+        display: none;
+    }
+
+    .Navbar_Menu {
+        display: block;
+        font-size: 28px;
+        font-weight: 600;
+        color: #c74126;
+    }
+
+}
+
+
+@media screen and (min-width:320px) and (max-width:480px) {
+    .Navbar_Container {
+        width: 100%;
+        height: 110px;
+        background-color: #d0d0d0;
+        position: fixed;
+        z-index: 10;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+
+    .Navbar_Left_Side>img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        margin-right: 8px;
+    }
+
+    .Navbar_Left_Side>h3 {
+        font-weight: 600;
+        font-size: 18px;
+        color: #c74126;
+    }
+
+    .Navbar_Right_Side {
+        display: none;
+    }
+
+    .Navbar_Menu {
+        display: block;
+        font-size: 25px;
+        font-weight: 600;
+        color: #c74126;
     }
 
 }
