--- a/src/Componets/Navbar/Navbar.css
+++ b/src/Componets/Navbar/Navbar.css
@@ -219,6 +219,20 @@
         transform: translate(-100vh);
     }
 
+    .Navbar_Right_Side>ul>li {
+        list-style: none;
+
+    }
+
+    #Navbar_Right_Side_Item {
+        text-decoration: none;
+        padding-left: 15px;
+        padding-right: 5px;
+        color: #c74126;
+        font-size: 35px;
+        font-weight: 600;
+    }
+
     .Navbar_responsive_nav {
         transform: none;
 
@@ -288,6 +302,20 @@
         background-color: rgb(199, 230, 230);
         transition: 1s;
         transform: translate(-100vh);
+    }
+
+    .Navbar_Right_Side>ul>li {
+        list-style: none;
+
+    }
+
+    #Navbar_Right_Side_Item {
+        text-decoration: none;
+        padding-left: 15px;
+        padding-right: 5px;
+        color: #c74126;
+        font-size: 30px;
+        font-weight: 600;
     }
 
     .Navbar_responsive_nav {
