--- a/src/Pages/Home/ThirdImage/ThirdImage.css
+++ b/src/Pages/Home/ThirdImage/ThirdImage.css
@@ -20,6 +20,7 @@
     font-size: 28px;
     font-weight: 600;
     padding: 10px;
+    text-align: center;
 }
 
 .ThirdImage_Section>p>span {
@@ -44,6 +45,7 @@
         font-size: 32px;
         font-weight: 600;
         padding: 20px 0px 20px 0px;
+        text-align: center;
     }
 
     .ThirdImage_Section>p>span {
@@ -70,6 +72,7 @@
         font-size: 32px;
         font-weight: 600;
         padding: 20px 0px 20px 0px;
+        text-align: center;
     }
 
     .ThirdImage_Section>p>span {
@@ -96,6 +99,7 @@
         font-size: 32px;
         font-weight: 600;
         padding: 20px 0px 20px 0px;
+        text-align: center;
     }
 
     .ThirdImage_Section>p>span {
@@ -121,6 +125,7 @@
         font-size: 32px;
         font-weight: 600;
         padding: 20px 0px 20px 0px;
+        text-align: center;
     }
 
     .ThirdImage_Section>p>span {
