add some bug fix

--- a/src/Componets/Navbar/Navbar.css
+++ b/src/Componets/Navbar/Navbar.css
@@ -156,6 +156,7 @@
 
     .Navbar_Right_Side {
         display: flex;
+        flex-direction: row;
         width: auto;
         justify-content: space-between;
         align-items: center;
@@ -224,7 +225,7 @@
         gap: 1.5rem;
         background-color: rgb(199, 230, 230);
         transition: 1s;
-        transform: translate(-100vh);
+        transform: translate(-100%);
     }
 
     .Navbar_Right_Side>ul>li {
@@ -311,7 +312,7 @@
         gap: 1.5rem;
         background-color: rgb(199, 230, 230);
         transition: 1s;
-        transform: translate(-100vh);
+        transform: translate(-100%);
     }
 
     .Navbar_Right_Side>ul>li {
