--- a/src/Pages/Home/FourthGrid/FourthGrid.css
+++ b/src/Pages/Home/FourthGrid/FourthGrid.css
@@ -34,12 +34,8 @@
     margin: 10px auto 20px auto;
     line-height: 19px;
     letter-spacing: 1px;
-    width: 25%;
-    height: 100%;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
-    overflow: hidden;
+    width: 363.6px;
+    height: 400px;
     padding: 10px;
     border: 1px solid #8d8484;
 }
@@ -51,10 +47,68 @@
     text-align: center;
 }
 
+.FourthGrid_Section_Main_First_Card_Image {
+    width: 100%;
+    height: 200px;
+}
+
 .FourthGrid_Section_Main_First_Card_Paragraph {
     font-size: 18px;
     font-weight: 600;
     color: #3a3c3e;
+    line-height: 19px;
+    letter-spacing: 1px;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    overflow: hidden;
+
+}
+
+.FourthGrid_Section_Main_Second_Card_Heading {
+    font-size: 28px;
+    font-weight: 600;
+    color: black;
+    text-align: center;
+    padding: 20px 0px;
+
+}
+
+.FourthGrid_Section_Main_Second_Card {
+    width: 90%;
+    height: 500px;
+    border: 1px solid red;
+    margin: 0px auto 30px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    gap: 20px;
+}
+
+.FourthGrid_Section_Main_Second_Card_Card {
+    font-size: 15px;
+    font-weight: 800;
+    margin: 10px auto 20px auto;
+    line-height: 19px;
+    letter-spacing: 1px;
+    width: 363.6px;
+    height: 400px;
+    padding: 10px;
+    border: 1px solid green;
+}
+
+.FourthGrid_Section_Main_First_Card_Card_Heading {
+    font-size: 25px;
+    font-weight: 600;
+    color: #c74126;
+    text-align: center;
+}
+
+.FourthGrid_Section_Main_Second_Card_Image {
+    width: 100%;
+    height: 200px;
 }
 
 @media screen and (min-width:1025px) and (max-width:1200px) {
@@ -89,12 +143,8 @@
         margin: 10px auto 20px auto;
         line-height: 19px;
         letter-spacing: 1px;
-        width: 35%;
-        height: 100%;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 4;
-        overflow: hidden;
+        width: 443.6px;
+        height: 400px;
         padding: 10px;
         border: 1px solid #8d8484;
     }
@@ -106,10 +156,24 @@
         text-align: center;
     }
 
+    .FourthGrid_Section_Main_First_Card_Image {
+        width: 100%;
+        height: 200px;
+    }
+
     .FourthGrid_Section_Main_First_Card_Paragraph {
         font-size: 18px;
         font-weight: 600;
         color: #3a3c3e;
+        line-height: 19px;
+        letter-spacing: 1px;
+        width: 100%;
+        height: 100%;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 4;
+        overflow: hidden;
+
     }
 
 }
@@ -146,12 +210,8 @@
         margin: 10px auto 20px auto;
         line-height: 19px;
         letter-spacing: 1px;
-        width: 45%;
-        height: 100%;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 4;
-        overflow: hidden;
+        width: 463.6px;
+        height: 400px;
         padding: 10px;
         border: 1px solid #8d8484;
     }
@@ -163,10 +223,24 @@
         text-align: center;
     }
 
+    .FourthGrid_Section_Main_First_Card_Image {
+        width: 100%;
+        height: 200px;
+    }
+
     .FourthGrid_Section_Main_First_Card_Paragraph {
         font-size: 18px;
         font-weight: 600;
         color: #3a3c3e;
+        line-height: 19px;
+        letter-spacing: 1px;
+        width: 100%;
+        height: 100%;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 4;
+        overflow: hidden;
+
     }
 }
 
@@ -202,12 +276,8 @@
         margin: 10px auto 20px auto;
         line-height: 19px;
         letter-spacing: 1px;
-        width: 65%;
-        height: 100%;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 4;
-        overflow: hidden;
+        min-width: 433.6px;
+        height: 400px;
         padding: 10px;
         border: 1px solid #8d8484;
     }
@@ -219,10 +289,24 @@
         text-align: center;
     }
 
+    .FourthGrid_Section_Main_First_Card_Image {
+        width: 100%;
+        height: 200px;
+    }
+
     .FourthGrid_Section_Main_First_Card_Paragraph {
         font-size: 18px;
         font-weight: 600;
         color: #3a3c3e;
+        line-height: 19px;
+        letter-spacing: 1px;
+        width: 100%;
+        height: 100%;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 4;
+        overflow: hidden;
+
     }
 }
 
@@ -273,6 +357,11 @@
         font-weight: 600;
         color: #c74126;
         text-align: center;
+    }
+
+    .FourthGrid_Section_Main_First_Card_Image {
+        width: 100%;
+        height: 200px;
     }
 
     .FourthGrid_Section_Main_First_Card_Paragraph {
