--- a/src/Componets/Navbar/Navbar.css
+++ b/src/Componets/Navbar/Navbar.css
@@ -32,7 +32,7 @@
     align-items: center;
 }
 
-.Navbar_Left_Side>img {
+.Navbar_Logo {
     width: 80px;
     height: 80px;
     border-radius: 50%;
@@ -86,7 +86,7 @@
     }
 
 
-    .Navbar_Left_Side>img {
+    .Navbar_Logo {
         width: 80px;
         height: 80px;
         border-radius: 50%;
@@ -141,7 +141,7 @@
     }
 
 
-    .Navbar_Left_Side>img {
+    .Navbar_Logo {
         width: 60px;
         height: 60px;
         border-radius: 50%;
@@ -198,7 +198,7 @@
     }
 
 
-    .Navbar_Left_Side>img {
+    .Navbar_Logo {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -286,7 +286,7 @@
     }
 
 
-    .Navbar_Left_Side>img {
+    .Navbar_Logo {
         width: 40px;
         height: 40px;
         border-radius: 50%;
