--- a/src/Componets/Footer/Footer.css
+++ b/src/Componets/Footer/Footer.css
@@ -6,7 +6,7 @@
 
 .Footer_Container {
     width: 100%;
-    height: 350px;
+    height: auto;
     background: #41526A;
     bottom: 0;
     left: 0;
@@ -110,7 +110,7 @@ h3 {
 
     .Footer_Container {
         width: 100%;
-        height: 350px;
+        height: auto;
         background: #41526A;
         bottom: 0;
         left: 0;
@@ -215,7 +215,7 @@ h3 {
 
     .Footer_Container {
         width: 100%;
-        height: 330px;
+        height: auto;
         background: #41526A;
         bottom: 0;
         left: 0;
@@ -322,7 +322,7 @@ h3 {
 
     .Footer_Container {
         width: 100%;
-        height: 330px;
+        height: auto;
         background: #41526A;
         bottom: 0;
         left: 0;
@@ -531,4 +531,110 @@ h3 {
         background-color: red;
 
     }
+}
+
+@media screen and (min-width:1201px) {
+
+    .Footer_Container {
+        width: 100%;
+        height: auto;
+        background: #41526A;
+        bottom: 0;
+        left: 0;
+        position: static;
+        padding-top: 60px;
+    }
+
+
+    .Footer_Container>.Footer_Section {
+        width: 80%;
+        height: auto;
+        display: flex;
+        justify-content: space-evenly;
+        margin: auto;
+        padding-left: 10px;
+
+    }
+
+
+    .Footer_Section_Second_Img {
+        width: 30%;
+        height: 100px;
+
+
+    }
+
+    .Footer_Section_Second_Img>img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    .Footer_Container>.Footer_Section>.Footer_Section_Third_Img {
+        width: 30%;
+        height: 100px;
+
+    }
+
+    .Footer_Container>.Footer_Section>.Footer_Section_Third_Img>img {
+        width: 100%;
+        height: 100px;
+        object-fit: contain;
+
+    }
+
+    .Footer_Section_Text {
+        width: 30%;
+        height: auto;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+
+
+    }
+
+    h3 {
+        color: #c74126;
+        font-size: 15px;
+        font-weight: 600;
+    }
+
+    .Footer_Section_Text_Text {
+        font-weight: 500;
+        font-size: 15px;
+        box-sizing: border-box;
+
+
+    }
+
+    .Footer_Section_Last_Div {
+        width: auto;
+        height: 40px;
+        margin: auto;
+        text-align: center;
+    }
+
+    .Footer_Section_Last_Div_Text {
+        font-weight: 500;
+        font-size: 22px;
+        color: white;
+    }
+
+    .active_nav {
+        position: relative;
+        background-color: #e8e9ec;
+        padding: 8px 10px;
+        border-radius: 10px;
+        color: black;
+    }
+
+    .active_nav::after {
+        content: '';
+        display: block;
+        background-color: red;
+        color: black;
+
+    }
+
 }
