--- a/src/Pages/AdvancedSearch/AdvancedSearch.css
+++ b/src/Pages/AdvancedSearch/AdvancedSearch.css
@@ -6,7 +6,7 @@
 
 .AdvacnedSearch_Container {
     width: 100%;
-    height: auto;
+    min-height: 70vh;
     padding-top: 110px;
 }
 
@@ -63,7 +63,7 @@
 @media screen and (min-width:1025px) and (max-width:1200px) {
     .AdvacnedSearch_Container {
         width: 100%;
-        height: auto;
+        min-height: 70vh;
         padding-top: 110px;
     }
 
@@ -186,7 +186,7 @@
     }
 
     .AdvancedSearch_Main {
-        width: 99%;
+        width: 80%;
         height: auto !important;
         padding: 10px 10px;
         box-sizing: border-box;
@@ -194,7 +194,7 @@
     }
 
     .AdvancedSearch_Select {
-        width: 70%;
+        width: 60%;
         height: auto;
         padding: 10px;
         display: grid;
