--- a/src/Pages/Home/Table/BNGLTABLE/BnglTableHeader.css
+++ b/src/Pages/Home/Table/BNGLTABLE/BnglTableHeader.css
@@ -90,6 +90,15 @@
       font-weight: 500;
       color: #3a3c3e;
    }
+
+   .Bngl_Card_Img {
+      max-width: 40px;
+      max-height: 40px;
+      margin: 2px;
+      padding: 2px;
+      object-fit: contain;
+   }
+
 }
 
 
@@ -134,6 +143,15 @@
       font-weight: 500;
       color: #3a3c3e;
    }
+
+   .Bngl_Card_Img {
+      max-width: 40px;
+      max-height: 40px;
+      margin: 2px;
+      padding: 2px;
+      object-fit: contain;
+   }
+
 }
 
 
@@ -178,4 +196,13 @@
       font-weight: 500;
       color: #3a3c3e;
    }
+
+   .Bngl_Card_Img {
+      max-width: 40px;
+      max-height: 40px;
+      margin: 2px;
+      padding: 2px;
+      object-fit: contain;
+   }
+
 }
