--- a/src/Pages/Home/Table/BnawaliTable/BnawaliTableHeader.css
+++ b/src/Pages/Home/Table/BnawaliTable/BnawaliTableHeader.css
@@ -86,6 +86,15 @@
         font-weight: 500;
         color: #3a3c3e;
     }
+
+    .Banawali_Card_Img {
+        max-width: 40px;
+        max-height: 40px;
+        margin: 2px;
+        padding: 2px;
+        object-fit: contain;
+    }
+
 }
 
 @media screen and (min-width:481px) and (max-width:768px) {
@@ -123,6 +132,15 @@
         font-weight: 500;
         color: #3a3c3e;
     }
+
+    .Banawali_Card_Img {
+        max-width: 40px;
+        max-height: 40px;
+        margin: 2px;
+        padding: 2px;
+        object-fit: contain;
+    }
+
 }
 
 @media screen and (min-width:320px) and (max-width:480px) {
@@ -160,4 +178,13 @@
         font-weight: 500;
         color: #3a3c3e;
     }
+
+    .Banawali_Card_Img {
+        max-width: 40px;
+        max-height: 40px;
+        margin: 2px;
+        padding: 2px;
+        object-fit: contain;
+    }
+
 }
