--- a/src/Pages/AdvancedSearch/AdvancedSearch.css
+++ b/src/Pages/AdvancedSearch/AdvancedSearch.css
@@ -256,7 +256,13 @@
         color: #3a3c3e;
     }
 
-
+    .Advanced_Card_Img {
+        max-width: 40px;
+        max-height: 40px;
+        margin: 2px;
+        padding: 2px;
+        object-fit: contain;
+    }
 }
 
 
@@ -339,5 +345,12 @@
         color: #3a3c3e;
     }
 
+    .Advanced_Card_Img {
+        max-width: 40px;
+        max-height: 40px;
+        margin: 2px;
+        padding: 2px;
+        object-fit: contain;
+    }
 
 }
