--- a/src/Pages/Home/Table/BhirranaTable/BhirranaTableHeader.css
+++ b/src/Pages/Home/Table/BhirranaTable/BhirranaTableHeader.css
@@ -23,6 +23,10 @@
     color: white;
 }
 
+.Bhirrana_CardList_MobileDevice {
+    display: none;
+}
+
 @media screen and (min-width:1025px) and (max-width:1200px) {
 
     .BhirranaTableHeader_Container {
@@ -42,6 +46,10 @@
         font-size: 28px;
         font-weight: 600;
         color: white;
+    }
+
+    .Bhirrana_CardList_MobileDevice {
+        display: none;
     }
 }
 
@@ -181,13 +189,13 @@
     }
 
     .Bhirrana_Mobile_Card_Left {
-        font-size: 28px;
+        font-size: 20px;
         font-weight: 600;
         color: #3a3c3e;
     }
 
     .Bhirrana_Mobile_Card_Right {
-        font-size: 20px;
+        font-size: 16px;
         font-weight: 500;
         color: #3a3c3e;
     }
