--- a/src/Pages/AdvancedSearch/AdvancedSearch.css
+++ b/src/Pages/AdvancedSearch/AdvancedSearch.css
@@ -11,21 +11,22 @@
 }
 
 .AdvancedSearch_Main {
-    width: 90%;
+    width: 80%;
     height: auto;
-    padding: 10px 10px;
     box-sizing: border-box;
-    margin: auto;
+    margin: 20px auto;
 }
 
 .AdvancedSearch_Select {
-    width: 100%;
+    width: 60%;
     height: auto;
-    padding: 10px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    gap: 10px 5px;
+    row-gap: 10px;
+    column-gap: 10px;
+    margin: auto;
+    padding-left: 10px;
 }
 
 .AdvancedSearch_Button_Div {
@@ -76,13 +77,16 @@
     }
 
     .AdvancedSearch_Select {
-        width: 100%;
+        width: 80%;
         height: auto;
         padding: 10px;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
-        gap: 10px 5px;
+        row-gap: 10px;
+        column-gap: 10px;
+        margin: auto;
+        padding-left: 10px;
     }
 
     .AdvancedSearch_Button_Div {
@@ -135,14 +139,16 @@
     }
 
     .AdvancedSearch_Select {
-        width: 90%;
+        width: 80%;
         height: auto;
         padding: 10px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
-        gap: 10px 5px;
+        row-gap: 10px;
+        column-gap: 10px;
         margin: auto;
+        padding-left: 10px;
     }
 
     .AdvancedSearch_Button_Div {
